--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: #FAF3F0;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -8,5 +8,45 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 60px;
+}
+
+.nav-link {
+  margin-top: 5px;
+  margin-right: 15px;
+  border-radius: 10px;
+  background-color: #FAF3F0;
+  border: 1px solid #e1d4ee;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+}
+
+.nav-link:hover {
+  border-radius: 5px;
+  background-color: #e1d4ee ;
+  border: 1px solid #FAF3F0 ;
+}
+
+.search-form-control {
+  position: relative;
+}
+
+.search-form-control .btn {
+  position: absolute;
+  top: 8px;
+  bottom: 8px;
+  right: 8px;
+}
+
+.search-form-control .form-control {
+  height: 3.5rem;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  border: 1px solid #e1d4ee;
+  border-radius: 10px;
+  background-color: #FAF3F0;
+}
+
+.search-form-control .form-control:focus {
+  border: 1px solid #a0c2a0;
+  outline: none !important;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
 }
