update homepage and started index

--- a/app/assets/stylesheets/components/_granny_card.scss
+++ b/app/assets/stylesheets/components/_granny_card.scss
@@ -1,6 +1,6 @@
-.cards {
+.grannies {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 16px;
   color: white;
   padding-top: 40px;
@@ -8,9 +8,10 @@
   font-family: 'Roboto', sans-serif;
 }
 
-.card-category {
+.card-granny {
   background-size: cover;
   background-position: center;
+  background-color: #DBC4F0 ;
   height: 240px;
   display: flex;
   justify-content: center;
@@ -35,35 +36,35 @@
 
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
-  .cards {
+  .grannies {
     grid-template-columns: 1fr;
   }
 }
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
-  .cards {
+  .grannies {
     grid-template-columns: 1fr;
   }
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
-  .cards {
+  .grannies {
     grid-template-columns: 1fr 1fr;
   }
 }
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
-  .cards {
-    grid-template-columns: 1fr 1fr;
+  .grannies {
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-  .cards {
-    grid-template-columns: 1fr 1fr;
+  .grannies {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }
