--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: #FAF3F0;
+  border-bottom: 1px solid #e1d4ee;;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -46,7 +47,7 @@
 }
 
 .search-form-control .form-control:focus {
-  border: 1px solid #a0c2a0;
+  background-color: #f9f8f7;
   outline: none !important;
   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
 }
