--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,73 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <style>
-     @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Oswald:wght@500&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Oswald:wght@500&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Oswald:wght@500&family=Roboto&display=swap');
     </style>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
+    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+  <div class="container-fluid">
+    <%= link_to "#", class: "navbar-brand" do %>
+      <%= image_tag "GOOD_GRANNY.png" %>
+    <% end %>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+  <%# Search form %>
+      <%= simple_form_for :search, url: root_path, method: :get do |f| %>
+        <div class="search-form-control form-group">
+          <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+          <button name="button" type="submit" class="btn btn-flat">
+          <i class="fas fa-search"></i> Search
+          </button>
+          </div>
+      <% end %>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto">
+        <%# if user_signed_in? %>
+          <% if user_signed_in? %>
+            <li class="nav-item">
+              <%= link_to "Add my granny", "#", class: "nav-link" %>
+            </li>
+          <% end %>
+          <li class="nav-item dropdown">
+            <%= image_tag "granny.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+              <% if current_user %>
+                <%= link_to "Profile", profile_path(current_user), class: "dropdown-item" %>
+              <% end %>
+              <%= link_to "Another action", "#", class: "dropdown-item" %>
+              <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %>
+            </div>
+          </li>
+        <%# else %>
+          <!--li class="nav-item"-->
+            <%#= link_to "Login", new_user_session_path, class: "nav-link" %>
+          <!--/li-->
+        <%# end %>
+      </ul>
+    </div>
+  </div>
+</div>
+
     <%= yield %>
+
+    <div class="footer">
+      <div class="footer-copyright">© Good Granny, Inc. All rights reserved.</div>
+      <div class="footer-links">
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+      </div>
+    </div>
+
   </body>
 </html>
