--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -9,6 +9,8 @@ h1 {
   font-weight: bold;
   text-align: left;
   font-family: 'Courgette', cursive;
-  margin-top: 10px;
+  margin-top: 25px;
   margin-bottom: 10px;
+  border-radius: 10px;
+  padding: 5px;
 }
