--- a/app/views/grannies/index.html.erb
+++ b/app/views/grannies/index.html.erb
@@ -6,53 +6,13 @@
 
       <% @grannies.each do |granny| %>
         <div class="card-granny">
-        <%= granny.name %>
+          <div class="top-card-granny">
+            <div class="name-granny"><%= granny.name %></div>
+            <div class="categories">Couture</div>
+          </div>
+          <div class="presentation"><%= granny.presentation %></div>
         </div>
       <% end %>
-
-      <%# <div class="card-granny">
-        Micheline
-      </div>
-
-      <div class="card-granny">
-        Huguette
-      </div>
-
-      <div class="card-granny">
-        Jeannine
-      </div>
-
-      <div class="card-granny">
-        Raymonde
-      </div>
-
-      <div class="card-granny">
-        Madeleine
-      </div>
-
-      <div class="card-granny">
-        Lucienne
-      </div>
-
-      <div class="card-granny">
-        Ginette
-      </div>
-
-      <div class="card-granny">
-        Thérèse
-      </div>
-
-      <div class="card-granny">
-        Simone
-      </div>
-
-      <div class="card-granny">
-        Colette
-      </div>
-
-      <div class="card-granny">
-        Yvette
-      </div> %>
     </div>
 
 </div>
