adjust background image and button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,8 +4,9 @@
     <h1>Good Granny,</h1>
     <br>
     <h2>la meilleure façon d'apprendre de nouvelles choses !</h2>
-    <button class="discover">Découvrez nos grannies</button>
   </div>
+    <%# <button class="discover">Découvrez nos grannies</button> %>
+    <%= link_to "Découvrez nos grannies", grannies_path, class: "discover" %>
 </div>
 
 <div class="container">
