--- a/app/assets/stylesheets/components/_button_discover.scss
+++ b/app/assets/stylesheets/components/_button_discover.scss
@@ -8,5 +8,7 @@
   font-size: 26px;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  margin-top: 60px;
+  position: relative;
+  top: 40px; left: 560px;
+  text-decoration: none;
 }
