--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,9 @@
               <% if current_user %>
                 <%= link_to "Profile", profile_path(current_user), class: "dropdown-item" %>
               <% end %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
+              <%= link_to "Sign up", new_user_registration_path, class: "dropdown-item" %>
+              <%= link_to "Sign in", new_user_session_path, class: "dropdown-item" %>
+              <%= link_to "Reservations", "#", class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %>
             </div>
           </li>
