--- a/app/views/grannies/index.html.erb
+++ b/app/views/grannies/index.html.erb
@@ -5,13 +5,15 @@
     <div class="grannies">
 
       <% @grannies.each do |granny| %>
-        <div class="card-granny">
-          <div class="top-card-granny">
-            <div class="name-granny"><%= granny.name %></div>
-            <div class="categories">Couture</div>
+        <%= link_to granny_path(granny), class:"text-decoration-none" do %>
+          <div class="card-granny">
+            <div class="top-card-granny">
+              <div class="name-granny"><%= granny.name %></div>
+              <div class="categories">Couture</div>
+            </div>
+            <div class="presentation"><%= granny.presentation %></div>
           </div>
-          <div class="presentation"><%= granny.presentation %></div>
-        </div>
+        <% end %>
       <% end %>
     </div>
 
