--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 
-<div class="banner" style="background-image: url(<%= asset_url('banner') %>);">
+<div class="banner" style="background-image: url(<%= image_path 'banner.png' %>);">
   <div class="container d-flex flex-column">
     <h1>Good Granny,</h1>
     <br>
