added link to button add granny

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
         <%# if user_signed_in? %>
           <% if user_signed_in? %>
             <li class="nav-item">
-              <%= link_to "Add my granny", "#", class: "nav-link" %>
+              <%= link_to "Add my granny", new_granny_path, class: "nav-link" %>
             </li>
           <% end %>
           <li class="nav-item dropdown">
