--- a/app/assets/stylesheets/components/_button_discover.scss
+++ b/app/assets/stylesheets/components/_button_discover.scss
@@ -9,6 +9,34 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   position: relative;
-  top: 40px; left: 560px;
+  top: 40px; left: 520px;
+  text-decoration: none;
+}
+
+.button-form {
+  border-radius: 5px;
+  border: 0;
+  padding: 12px;
+  background-color: #FFCACC;
+  color: rgba(0, 0, 0, 0.491);
+  font-family: 'Roboto', cursive;
+  font-size: 26px;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  text-decoration: none;
+}
+
+.back-button {
+  border-radius: 5px;
+  border: 0;
+  padding: 12px;
+  background-color: #FFCACC;
+  color: rgba(0, 0, 0, 0.491);
+  font-family: 'Roboto', cursive;
+  font-size: 26px;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  position: absolute;
+  top: 112px; left: 1175px;
   text-decoration: none;
 }
