--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -32,6 +32,28 @@
   font-style: italic;
 }
 
+.show-card {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: space-around;
+  font-family: 'Roboto', sans-serif;
+}
+
+.main-card-granny {
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 40px;
+  padding: 30px;
+  background-color: #DBC4F0;
+  font-size: 16px;
+}
+
+.card-from-res {
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 40px;
+  padding: 30px;
+  background-color: #E1D2F2;
+}
 
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
