--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,5 +1,15 @@
 <% if current_user == @user %>
   <%= @user.name %>
+
+<div>
+  <% @user.grannies.each do |granny| %>
+    <p>Nom: <%= granny.name %></p>
+    <p>Présentation: <%= granny.presentation %></p>
+    <p>Adresse: <%= granny.location %></p>
+    <p>Prix: <%= granny.price %></p>
+    <%= link_to "Modifier mamie", edit_granny_path(granny.id), class: 'btn' %>
+  <% end  %>
+</div>
   <ul>
     <% @user.reservations.each do |reservation| %>
       <li>
