--- a/app/views/grannies/_info_window.html.erb
+++ b/app/views/grannies/_info_window.html.erb
@@ -1,3 +1,22 @@
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+  <% active = "active" %>
+    <% granny.photos.each do |photo| %>
+      <div class="carousel-item <%= active %>">
+        <%= cl_image_tag photo.key, height: 100, width: 170, crop: :fill %>
+      </div>
+      <% active = "" %>
+    <% end %>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 <h2><%= granny.name %></h2>
 <p><%= granny.price %>€</p>
 <p><%= granny.presentation %></p>
