--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -7,7 +7,8 @@
     <p>Présentation: <%= granny.presentation %></p>
     <p>Adresse: <%= granny.location %></p>
     <p>Prix: <%= granny.price %></p>
-    <%= link_to "Modifier mamie", edit_granny_path(granny.id), class: 'btn' %>
+    <%= link_to "Modifier mamie", edit_granny_path(granny.id), class: 'btn btn-primary' %>
+    <%= link_to "Supprimer mamie", granny_path(granny), data: {turbo_method: :delete, turbo_confirm: "Vous êtes sûr?"}, class: 'btn btn-primary' %>
   <% end  %>
 </div>
   <ul>
