--- a/app/views/grannies/index.html.erb
+++ b/app/views/grannies/index.html.erb
@@ -12,7 +12,7 @@
           <div class="grannies">
             <% @grannies.each do |granny| %>
               <%= link_to granny_path(granny), class:"text-decoration-none" do %>
-                <div class="card-granny">
+                <div class="card-granny m-1">
                   <div class="top-card-granny">
                     <div class="name-granny"><%= granny.name %></div>
                     <div class="categories">Couture</div>
