create path add edit delete granny

--- a/app/assets/stylesheets/components/_name_granny.scss
+++ b/app/assets/stylesheets/components/_name_granny.scss
@@ -4,3 +4,11 @@
   font-size: 40px;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
+
+.name-granny-profile {
+  color: #FFFF ;
+  justify-content: center;
+  font-size: 20px;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-family: 'Courgette', cursive;
+}
