--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -55,6 +55,24 @@
   background-color: #E1D2F2;
 }
 
+.profile-card {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: 'Roboto', sans-serif;
+}
+
+.profile-card-granny {
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 40px;
+  padding: 30px;
+  margin: 2%;
+  background-color: #DBC4F0;
+  font-size: 16px;
+}
+
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .cards {
