--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,7 +22,7 @@
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to "Add my granny", "#", class: "nav-link" %>
+            <%= link_to "Ajouter ma granny", new_granny_path, class: "nav-link" %>
           </li>
         <% end %>
         <li class="nav-item dropdown">
