--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -55,6 +55,11 @@
   background-color: #E1D2F2;
 }
 
+.title-show {
+  display: flex;
+  align-items: baseline;
+}
+
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .cards {
