--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -17,6 +17,10 @@ h1 {
   padding: 5px;
 }
 
-.content {
-  min-height: calc(100vh - 100px);
+.banner-content {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  align-items: center;
+
 }
