--- a/app/assets/stylesheets/components/_button_discover.scss
+++ b/app/assets/stylesheets/components/_button_discover.scss
@@ -19,7 +19,7 @@
   background-color: #FFCACC;
   color: rgba(0, 0, 0, 0.491);
   font-family: 'Roboto', cursive;
-  font-size: 26px;
+  font-size: 2Opx;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   text-decoration: none;
