--- a/app/views/grannies/_form.html.erb
+++ b/app/views/grannies/_form.html.erb
@@ -7,7 +7,9 @@
       <%= p.input :specialty, label: "Spécialités" %>
     <% end %>
     <%= f.input :presentation, as: :text, label: "Description" %>
-    <%= f.input :location, label: "Adresse" %>
+    <%= f.input :location,
+      input_html: {data: {address_autocomplete_target: "location"}},
+      wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}} %>
     <%= f.input :price, label: "Prix" %>
     <%= f.input :photos, as: :file, input_html: { multiple: true }, label: "Photo(s)"%>
     <%= f.submit "Ajouter" %>
