--- a/app/views/grannies/index.html.erb
+++ b/app/views/grannies/index.html.erb
@@ -17,7 +17,26 @@
                     <div class="name-granny"><%= granny.name %></div>
                     <div class="categories">Couture</div>
                   </div>
-                  <div class="presentation"><%= granny.presentation %></div>
+                    <div id="carouselExampleControls" class="carousel slide">
+                      <div class="carousel-inner">
+                      <% active = "active" %>
+                        <% granny.photos.each do |photo| %>
+                          <div class="carousel-item <%= active %>">
+                            <%= cl_image_tag photo.key, height: 120, width: 200, crop: :fill, class:"img-carousel" %>
+                          </div>
+                          <% active = "" %>
+                        <% end %>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                      </div>
+                  <%# <div class="presentation"><%= granny.presentation</div> %>
                 </div>
               <% end %>
             <% end %>
