--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -162,13 +162,34 @@
   justify-content: center;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   align-items: center;
-  font-size: 16px;
+  font-size: 12px;
   display: flex;
-  width: 80px;
+  width: 30%;
   border: 1px solid #FAF3F0;
   border-radius: 50px;
   height: 30px;
   background-color: #e2d2f2;
+}
+
+.categories-show {
+  color: white;
+  justify-content: center;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+  align-items: center;
+  font-size: 16px;
+  display: flex;
+  width: auto;
+  border: 1px solid #FAF3F0;
+  border-radius: 50px;
+  height: 30px;
+  background-color: #e2d2f2;
+  padding: 5px;
+  margin: 0 5px;
+}
+
+.categories-flex{
+  display: flex;
+
 }
 
 .img-carousel {
