--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
       <%= text_field_tag :query,
             params[:query],
             class: "form-control string required",
-            placeholder: "Type a keyword"
+            placeholder: "Tapez un mot-clef"
         %>
       <%= submit_tag "Search", name: "", class: "btn btn-flat" %>
     <% end %>
