--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -162,9 +162,10 @@
   justify-content: center;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   align-items: center;
-  font-size: 12px;
+  font-size: 16px;
   display: flex;
-  width: 30%;
+  width: auto;
+  padding: 5px;
   border: 1px solid #FAF3F0;
   border-radius: 50px;
   height: 30px;
