--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,12 +36,12 @@
           <%= image_tag "granny.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
             <% if current_user %>
-              <%= link_to "Profile", profile_path(current_user), class: "dropdown-item" %>
+              <%= link_to "Mon profil", profile_path(current_user), class: "dropdown-item" %>
             <% end %>
-            <%= link_to "Sign up", new_user_registration_path, class: "dropdown-item" %>
-            <%= link_to "Sign in", new_user_session_path, class: "dropdown-item" %>
-            <%= link_to "Reservations", "#", class: "dropdown-item" %>
-            <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %>
+            <%= link_to "S'inscrire", new_user_registration_path, class: "dropdown-item" %>
+            <%= link_to "Se connecter", new_user_session_path, class: "dropdown-item" %>
+            <%= link_to "Réservations", "#", class: "dropdown-item" %>
+            <%= link_to "Se déconnecter", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %>
           </div>
         </li>
       </ul>
