--- a/app/assets/stylesheets/components/_name_granny.scss
+++ b/app/assets/stylesheets/components/_name_granny.scss
@@ -12,3 +12,16 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-family: 'Courgette', cursive;
 }
+
+.titles {
+  margin: 0;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 40px;
+  font-weight: bold;
+  text-align: left;
+  font-family: 'Courgette', cursive;
+  margin-top: 25px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  padding: 5px;
+}
