--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,14 @@
 <div class="container">
-  <h2 class="">Sign up</h2>
+  <div class="title-show">
+    <span class="back-button">
+    <%# <%= link_to(:action => '/') do %>
+    <i class="fa-solid fa-arrow-left" style="color: #1c1717;"></i>
+    <%# <% end %>
+    </span>
+    <h2 class="titles">S'inscrire</h2>
+  </div>
 
+  <div class="form-container">
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_notification %>
 
@@ -11,17 +19,16 @@
                     input_html: { autocomplete: "email" }%>
         <%= f.input :password,
                     required: true,
-                    hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                    hint: ("#{@minimum_password_length} charactères minimum" if @minimum_password_length),
                     input_html: { autocomplete: "new-password" } %>
         <%= f.input :password_confirmation,
                     required: true,
                     input_html: { autocomplete: "new-password" } %>
       </div>
-
+      <br>
       <div class="form-actions">
-        <%= f.button :submit, "Sign up" %>
+        <%= f.button :submit, "S'inscrire", class: "button-form" %>
       </div>
     <% end %>
-
-    <%= render "devise/shared/links" %>
+  </div>
 </div>
