--- a/app/views/grannies/new.html.erb
+++ b/app/views/grannies/new.html.erb
@@ -1,3 +1,12 @@
 <div class="container">
-<%= render "form" %>
+  <div class="title-show">
+      <span class="back-button">
+      <%# <%= link_to(:action => '/') do %>
+      <i class="fa-solid fa-arrow-left" style="color: #1c1717;"></i>
+      <%# <% end %>
+      </span>
+      <h2 class="titles">Ajouter une granny</h2>
+    </div>
+
+  <%= render "form" %>
 </div>
