--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,7 @@
             class: "form-control string required",
             placeholder: "Tapez un mot-clef"
         %>
-      <%= submit_tag "Search", name: "", class: "btn btn-flat" %>
+      <%= submit_tag "Search", name: "", class: "button-form" %>
     <% end %>
 
 
