--- a/app/views/grannies/_marker.html.erb
+++ b/app/views/grannies/_marker.html.erb
@@ -1,3 +1,1 @@
-<%= image_tag "logo.png", height: 30, width: 30, alt: "Logo" %>
-
-
+<%= image_tag "logo.png", height: 30, width: 30, alt: "Logo", data: { map_target: 'markers', num: @granny.id } %>
