--- a/app/assets/stylesheets/components/_name_granny.scss
+++ b/app/assets/stylesheets/components/_name_granny.scss
@@ -5,6 +5,14 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
+.name-granny-big {
+  color: #FFFF ;
+  justify-content: center;
+  font-size: 50px;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-family: 'Courgette', cursive;
+}
+
 .name-granny-profile {
   color: #FFFF ;
   justify-content: center;
