--- a/app/views/grannies/index.html.erb
+++ b/app/views/grannies/index.html.erb
@@ -7,44 +7,47 @@
 
     <div class="row">
 
-      <div class="col-8">
+      <div class="col-7">
 
-          <div class="grannies">
-            <% @grannies.each do |granny| %>
-              <%= link_to granny_path(granny), class:"text-decoration-none" do %>
-                <div class="card-granny m-1">
-                  <div class="top-card-granny">
-                    <div class="name-granny"><%= granny.name %></div>
-                    <div class="categories">Couture</div>
-                  </div>
-                    <div id="carouselExampleControls" class="carousel slide">
-                      <div class="carousel-inner">
-                      <% active = "active" %>
-                        <% granny.photos.each do |photo| %>
-                          <div class="carousel-item <%= active %>">
-                            <%= cl_image_tag photo.key, height: 120, width: 200, crop: :fill, class:"img-carousel" %>
-                          </div>
-                          <% active = "" %>
-                        <% end %>
-                      </div>
-                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                      </button>
-                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                      </button>
-                      </div>
-                  <%# <div class="presentation"><%= granny.presentation</div> %>
+        <div class="grannies">
+          <% @grannies.each do |granny| %>
+            <%= link_to granny_path(granny), class:"text-decoration-none" do %>
+              <div class="card-granny m-1">
+                <div class="top-card-granny">
+                  <span class="name-granny"><%= granny.name %></span>
+                  <span class="categories-flex">
+                    <% granny.categories.each do |category| %>
+                      <span class="categories"><%= category.name %></span>
+                    <% end %>
+                  </span>
                 </div>
-              <% end %>
+                  <div id="carouselExampleControls" class="carousel slide">
+                    <span class="carousel-inner">
+                      <% active = "active" %>
+                      <% granny.photos.each do |photo| %>
+                        <div class="carousel-item <%= active %>">
+                          <%= cl_image_tag photo.key, height: 140, width: 260, crop: :fill, class:"img-carousel" %>
+                        </div>
+                        <% active = "" %>
+                      <% end %>
+                    </span>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+              </div>
             <% end %>
-          </div>
+          <% end %>
+        </div>
 
       </div>
 
-      <div class="col-4">
+      <div class="col-5">
 
         <div id="map-sticky"
               data-controller="map"
