updated button back

--- a/app/views/grannies/new.html.erb
+++ b/app/views/grannies/new.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="title-show">
       <span class="back-button">
-      <%# <%= link_to(:action => '/') do %>
+      <%= link_to :back do %>
       <i class="fa-solid fa-arrow-left" style="color: #1c1717;"></i>
-      <%# <% end %>
+      <% end %>
       </span>
       <h2 class="titles">Ajouter une granny</h2>
     </div>
